jupyter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-notebook
  namespace:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  #- host: yourhost.yourdomain.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: jupyter-notebook
          servicePort: 8888
  #tls:
  #- secretName: jupyter-notebook-tls
  #  hosts:
  #    - yourhost.yourdomain.com
